# deep-mca

./: .gitignore  README.md  pyproject.toml
.github/workflows/: inference_tests.yml  lint.yml
benchmarks/: benchmark_llvm_mca.py
configs/: finetune.yaml  pretrain.yaml
notebooks/: convert_pretrain_dataset_to_x86.ipynb  convert_skylake_to_x86.ipynb  extract_basic_blocks.ipynb  llvm.ipynb
scripts/: benchmark_llvm_mca.sh  create_vocab.py
src/deep_mca/: build_vocab.py  data.py  finetune.py  model.py  predict.py  pretrain.py  tokenize_dataset.py  tokenizer.py  utils.py
tests/: test_predict.py
